# filter-adaptive-hnswlib

./: .gitignore  CMakeLists.txt  README.md
evaluation/: CMakeLists.txt  README.md  abs_ground_truth.py  abs_ndcg.py  abs_recall.py  construct_multi_index_ung.py  data_to_bin.cpp  evaluate_baselines.cpp  evaluate_postfilter_baseline.cpp  evaluate_postfilter_baselines.cpp  gen_fvecs.cpp  gen_groundtruth.py  gen_queries.py  histogram.py  index_acorn.cpp  index_baselines.cpp  index_postfilter_baseline.cpp  ndcg.py  ndcg_ung.py  prepare_ung_grund_truth.cpp  process_input_data.py  query_histogram.py  recall.py  recall_ung.py  search_gt_ung.py  search_ung.sh  setup.sh  stop_tags.txt
evaluation/queries/multi-tag/heterogeneous/10th-percentile/: q1  q10  q100  q11  q12  q13  q14  q15  q16  q17  q18  q19  q2  q20  q21  q22  q23  q24  q25  q26  q27  q28  q29  q3  q30  q31  q32  q34  q35  q36  q37  q38  q39  q40  q42  q43  q44  q45  q46  q47  (+49 more)
evaluation/queries/multi-tag/heterogeneous/50th-percentile/: q1  q100  q12  q14  q15  q16  q18  q2  q20  q21  q22  q23  q24  q25  q26  q27  q28  q3  q30  q31  q32  q33  q34  q35  q36  q37  q38  q39  q4  q40  q41  q42  q43  q44  q47  q48  q49  q5  q50  q52  (+45 more)
evaluation/queries/multi-tag/heterogeneous/90th-percentile/: q1  q10  q11  q12  q13  q15  q16  q17  q18  q19  q2  q20  q21  q23  q25  q26  q27  q29  q3  q31  q32  q33  q35  q37  q4  q5  q6  q9
evaluation/queries/multi-tag/homogeneous/10th-percentile/: q10  q100  q11  q12  q13  q14  q15  q16  q17  q18  q19  q2  q20  q21  q22  q23  q24  q25  q26  q27  q28  q29  q3  q30  q31  q32  q33  q34  (+71 more)
(+740 files in other folders)
